--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="HandheldFriendly" content="True">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-<title>Ismail Shallis</title>
+<title>Ismail Shallis Rocks</title>
 
 <meta name="description" content="Chloe Hayward. Director. Current Works."/>
 <meta name="author" content="http://chloehayward.co">
