progress bar and cleanup

--- a/index.html
+++ b/index.html
@@ -71,75 +71,65 @@
 
 	<!-- HERO (not clickable) -->
 	<div class="project hero">
-	  <video muted loop autoplay playsinline preload="auto" crossorigin="anonymous">
+	  <video muted loop autoplay playsinline preload="auto" crossorigin="anonymous" poster="img/hero-fallback.jpg" fetchpriority="high">
 		<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 	  </video>
-	  <img class="fallback" src="img/hero-fallback.jpg" alt="">
 	</div>
 
 	<!-- GRID -->
 	<div class="grid">
 	  <a href="" class="project">
-		<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
-		<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 	  </a>
 
 	  <a href="" class="project">
-		<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
-		<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 	  </a>
 
 	  <a href="" class="project">
-		<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
-		<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 	  </a>
 
 	  <a href="" class="project">
-		<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
-		<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 	  </a>
 
 	  <a href="" class="project">
-		<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
-		<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 	  </a>
 	  
 	  <a href="" class="project">
-		  <video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 			<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		  </video>
-		  <img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 		</a>
 		
 		<a href="" class="project">
-			<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+			<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 			  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 			</video>
-			<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 		</a>
 		  
 		<a href="" class="project">
-			<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+			<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 				<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 			</video>
-			<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 		</a>
 			
 		<a href="" class="project">
-			<video muted loop autoplay playsinline preload="metadata" crossorigin="anonymous">
+			<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 			  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 			</video>
-			<img class="fallback" src="img/tile-01-fallback.jpg" alt="">
 		</a>
 	</div><!-- .grid -->
 
