--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
 		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
+		<div class="overlay">
+			<h2 class="title measure">PROJECT TITLE</h2>
+			<div class="after-title measure">
+			  <h3 class="subtitle">SUBTITLE GOES HERE</h3>
+			  <p class="caption">Short caption text</p>
+			</div>
+		  </div>
 	  </a>
 
 	  <a href="" class="project">
@@ -94,6 +101,13 @@
 		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
+		<div class="overlay">
+			<h2 class="title measure">PROJECT TITLE</h2>
+			<div class="after-title measure">
+			  <h3 class="subtitle">SUBTITLE GOES HERE</h3>
+			  <p class="caption">Short caption text</p>
+			</div>
+		  </div>
 	  </a>
 
 	  <a href="" class="project">
