Modal page overlay 1st attempt

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
 	<!-- GRID -->
 	<div class="grid">
-	  <a href="" class="project">
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
 		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
 		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
 		</video>
@@ -88,98 +89,105 @@
 			<p class="caption">Short caption text</p>
 		  </div>
 	  </a>
-
-	  <a href="" class="project">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-		  </video>
-		  <div class="overlay">
-			  <h2 class="title">Project Title</h2>
-			  <h3 class="subtitle">Subtitle here</h3>
-			  <p class="caption">Short caption text</p>
-			</div>
-		</a>
-
-	  <a href="" class="project">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-		  </video>
-		  <div class="overlay">
-			  <h2 class="title">Project Title</h2>
-			  <h3 class="subtitle">Subtitle here</h3>
-			  <p class="caption">Short caption text</p>
-			</div>
-		</a>
-
-	  <a href="" class="project">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-		  </video>
-		  <div class="overlay">
-			  <h2 class="title">Project Title</h2>
-			  <h3 class="subtitle">Subtitle here</h3>
-			  <p class="caption">Short caption text</p>
-			</div>
-		</a>
-
-	  <a href="" class="project">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-		  </video>
-		  <div class="overlay">
-			  <h2 class="title">Project Title</h2>
-			  <h3 class="subtitle">Subtitle here</h3>
-			  <p class="caption">Short caption text</p>
-			</div>
-		</a>
 	  
-	  <a href="" class="project">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			<source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-		  </video>
-		  <div class="overlay">
-			  <h2 class="title">Project Title</h2>
-			  <h3 class="subtitle">Subtitle here</h3>
-			  <p class="caption">Short caption text</p>
-			</div>
-		</a>
-		
-		<a href="" class="project">
-			<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-			</video>
-			<div class="overlay">
-				<h2 class="title">Project Title</h2>
-				<h3 class="subtitle">Subtitle here</h3>
-				<p class="caption">Short caption text</p>
-			  </div>
-		  </a>
-		  
-		<a href="" class="project">
-			<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-			</video>
-			<div class="overlay">
-				<h2 class="title">Project Title</h2>
-				<h3 class="subtitle">Subtitle here</h3>
-				<p class="caption">Short caption text</p>
-			  </div>
-		  </a>
-			
-		<a href="" class="project">
-			<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
-			  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
-			</video>
-			<div class="overlay">
-				<h2 class="title">Project Title</h2>
-				<h3 class="subtitle">Subtitle here</h3>
-				<p class="caption">Short caption text</p>
-			  </div>
-		  </a>
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
+	  <a href="/work/between-the-years/" class="project" data-vimeo="469961565" aria-label="Between The Years">
+		<video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/hero-fallback.jpg">
+		  <source src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee" type="video/mp4">
+		</video>
+		<div class="overlay">
+			<h2 class="title">Project Title</h2>
+			<h3 class="subtitle">Subtitle here</h3>
+			<p class="caption">Short caption text</p>
+		  </div>
+	  </a>
+	  
 	</div><!-- .grid -->
 
   </div><!-- .content -->
 </div><!-- .container -->
+
+<!-- modal shell (once, near </body>) -->
+<dialog id="player-modal">
+  <button class="modal-close" aria-label="Close">✕</button>
+  <div class="player-wrap"><!-- Vimeo iframe injected here --></div>
+</dialog>
 
 <!-- One small, modern JS file for everything -->
 <script src="js/app.js" defer></script>
