--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <!-- Speed up video start -->
   <link rel="preconnect" href="https://player.vimeo.com" crossorigin>
+  <link rel="preconnect" href="https://i.vimeocdn.com" crossorigin>
+  <link rel="preconnect" href="https://f.vimeocdn.com" crossorigin>
   <link rel="dns-prefetch" href="//player.vimeo.com">
   <link rel="preconnect" href="https://vod-progressive.akamaized.net" crossorigin>
 
