Still broken modal animation from chatGPT, switching to Claude.

--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@
 
 <!-- modal shell (once, near </body>) -->
 <dialog id="player-modal">
-  <button class="modal-close" aria-label="Close">✕</button>
-  <div class="player-wrap"><!-- Vimeo iframe injected here --></div>
+  <div class="modal-panel">
+	<button class="modal-close" aria-label="Close">✕</button>
+	<div class="player-wrap"><!-- iframe injected here --></div>
+  </div>
 </dialog>
 
 <!-- One small, modern JS file for everything -->
