failed animation - stripped it all back to no animation

--- a/index.html
+++ b/index.html
@@ -186,11 +186,10 @@
 </div><!-- .container -->
 
 <!-- modal shell (once, near </body>) -->
+<!-- modal shell (once, near </body>) -->
 <dialog id="player-modal">
-  <div class="modal-panel">
-	<button class="modal-close" aria-label="Close">✕</button>
-	<div class="player-wrap"><!-- iframe injected here --></div>
-  </div>
+  <button class="modal-close" aria-label="Close">✕</button>
+  <div class="player-wrap"><!-- iframe injected here --></div>
 </dialog>
 
 <!-- One small, modern JS file for everything -->
