--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	  <div class="project hero-tile">
 		<video
 		  muted loop autoplay playsinline preload="auto" crossorigin="anonymous"
-		  poster="img/hero-fallback.jpg">
+		  poster="/img/hero-fallback.jpg">
 		  <source
 			src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			type="video/mp4">
@@ -92,7 +92,7 @@
 
 		<!-- Example tile: replace slug + vimeo id + poster as needed -->
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -106,7 +106,7 @@
 
 		<!-- Duplicate/adjust as needed (keep <a> + data-vimeo for overlay) -->
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -119,7 +119,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -132,7 +132,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -145,7 +145,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -158,7 +158,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -171,7 +171,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -184,7 +184,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
@@ -197,7 +197,7 @@
 		</a>
 		
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
-		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="img/tiles/between-the-years.jpg">
+		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg">
 			<source
 			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
 			  type="video/mp4">
