Video perf improvements #1

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <link rel="stylesheet" href="css/main.css">
 
   <!-- Lenis: you’ve said this must be in <head> -->
-  <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+  <script src="/js/lenis.min.js" defer></script>
 </head>
 <body class="page-home">
 
