Header animation fixes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
   
 	  <!-- ONE set of links for both desktop and mobile -->
 	  <div class="links" data-links>
-		<a class="nav-link" href="/work/">Work</a>
+		<button class="menu-close" data-nav-close>×</button>
+		<a class="nav-link is-current" href="/work/">Work</a>
 		<a class="nav-link" href="/info/">Info</a>
 		<a class="nav-link" href="https://instagram.com/yourhandle" target="_blank" rel="noopener">Instagram</a>
 		<a class="nav-link" href="/archive/">Archive</a>
@@ -69,7 +70,6 @@
 	  <button class="nav-toggle" data-nav-toggle>Menu</button>
 	</div>
   
-	<div class="nav-scrim" data-scrim></div>
   </header>
 
   <!-- Main content -->
@@ -188,7 +188,7 @@
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
 		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg" loading="lazy">
 			<source
-			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
+			  src="https://player.vimeo.com/progressive_redirect/playback/803268323/rendition/720p/file.mp4?loc=external&log_user=0&signature=b098a06880540a0ee86fe95c131411ae69021aae745bdf0cc8c8934c88d4dcb6"
 			  type="video/mp4">
 		  </video>
 		  <div class="overlay">
@@ -201,7 +201,7 @@
 		<a class="project tile" href="/work/between-the-years/" data-vimeo="469961565">
 		  <video muted loop playsinline preload="metadata" crossorigin="anonymous" poster="/img/hero-fallback.jpg" loading="lazy">
 			<source
-			  src="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
+			  src="https://player.vimeo.com/progressive_redirect/playback/1071518207/rendition/720p/file.mp4?loc=external&log_user=0&signature=9fa98d149321bd786e1b95d4eba0def319733372f065873fa0f1473801df3ec3"
 			  type="video/mp4">
 		  </video>
 		  <div class="overlay">
