--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
 
   <!-- Performance: warm the video stack -->
   <link rel="preconnect" href="https://player.vimeo.com" crossorigin>
-  <link rel="preconnect" href="https://i.vimeocdn.com" crossorigin>
-  <link rel="preconnect" href="https://f.vimeocdn.com" crossorigin>
-  <link rel="preconnect" href="https://vod-progressive.akamaized.net" crossorigin>
-  <link rel="dns-prefetch" href="//player.vimeo.com">
 
   <!-- Optional: Preload first hero video for fast LCP (swap URL to your preferred source) -->
   <link rel="preload" as="video" crossorigin
-		href="https://player.vimeo.com/progressive_redirect/playback/1089588494/rendition/1080p/file.mp4?loc=external&amp;log_user=0&amp;signature=f543dea7d92fca26002b28c25a894b5541b695fa12225384e91ccbb8070d20ee"
-		type="video/mp4" fetchpriority="high">
+	href="https://player.vimeo.com/progressive_redirect/playback/463600505/rendition/1080p/file.mp4?loc=external&log_user=0&signature=cabbe2cfab59e99d07786683ab48182181ed0fb70f78142ef021b2527c7f6d06"
+	type="video/mp4" fetchpriority="high">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/modern-normalize.min.css">
