--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <!-- Performance: warm the video stack -->
   <!-- HEAD (homepage + project pages) -->
   <link rel="preload" as="script" href="https://player.vimeo.com/api/player.js" crossorigin>
+  <link rel="preload" href="/fonts/Area-Black.woff2" as="font" type="font/woff2" crossorigin>
   <!-- HEAD -->
   <link rel="preload" as="style"  href="/css/plyr.min.css">
   <link rel="preload" as="script" href="/js/plyr.min.js">
@@ -109,9 +110,8 @@
 		  </video>
 		
 		  <div class="overlay">
-			<h2 class="title">Between Two Years</h2>
-			<div class="subtitle">Brand Film</div>
-			<p class="caption">Director’s Cut</p>
+			<h2 class="title">Saucony</h2>
+			<div class="subtitle">Anthem</div>
 		  </div>
 		</a>
 		
@@ -128,8 +128,8 @@
 		  </video>
 		
 		  <div class="overlay">
-			<h2 class="title">Between Two Years</h2>
-			<div class="subtitle">Brand Film</div>
+			<h2 class="title">24 Hour Fitness</h2>
+			<div class="subtitle">Yes We Can</div>
 			<p class="caption">Director’s Cut</p>
 		  </div>
 		</a>
